tests/paczka1/fuzzy1/40517037.err
Error in line 2: 37NYF2 A829 96,7
Error in line 6: S4 S6 66,2
Error in line 12: S4 A562 96,2
Error in line 14: S4 A562 63,5
Error in line 15: S4 A829 87,8
Error in line 18: S4 A829 3,55
Error in line 10: hiNPwwVv3wR S6 80,5
Error in line 23: S4 A562 62,4
Error in line 27: S4 S4 27,7
Error in line 29: S4 S6 94,8
Error in line 31: S4 A829 36,6
Error in line 35: S4 A829 95,6
Error in line 32: 37NYF2 S4 269,7
